fix home page overflow

--- a/web/src/components/HomePage.scss
+++ b/web/src/components/HomePage.scss
@@ -18,6 +18,8 @@
 }
 
 .home-content {
+  overflow: hidden;
+
   > *:not(:last-child) {
     margin-bottom: $grid-gap-default * 2;
   }
